--- a/preact/src/routes/profile/style.scss
+++ b/preact/src/routes/profile/style.scss
@@ -1,6 +1,6 @@
-@import '~style/helpers';
+@import '../../style/helpers';
 
-.home {
+.profile {
 	padding: 56px 20px;
 	min-height: 100%;
 	width: 100%;
